// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card unit tests pollCard should finish on card verification failure 1`] = `
Object {
  "circleCardId": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa75",
  "createdAt": Object {
    "nanoseconds": 0,
    "seconds": 1608168243,
  },
  "id": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa76",
  "metadata": Object {
    "billingDetails": Object {
      "city": "Sofia",
      "country": "Bulgaria",
      "line1": "Nqkade v Sofia",
      "line2": "",
      "name": "Alex Ivanov",
      "postalCode": "1000",
    },
    "digits": "0832",
    "network": "VISA",
  },
  "ownerId": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa72",
  "updatedAt": Object {
    "nanoseconds": 0,
    "seconds": 1608176083,
  },
  "verification": Object {
    "cvv": "fail",
  },
}
`;

exports[`Card unit tests pollCard should finish on card verification success 1`] = `
Object {
  "circleCardId": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa75",
  "createdAt": Object {
    "nanoseconds": 0,
    "seconds": 1608168243,
  },
  "id": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa76",
  "metadata": Object {
    "billingDetails": Object {
      "city": "Sofia",
      "country": "Bulgaria",
      "line1": "Nqkade v Sofia",
      "line2": "",
      "name": "Alex Ivanov",
      "postalCode": "1000",
    },
    "digits": "0832",
    "network": "VISA",
  },
  "ownerId": "ae6b689c-5dcb-41ed-84a7-51e6ce7faa72",
  "updatedAt": Object {
    "nanoseconds": 0,
    "seconds": 1608176083,
  },
  "verification": Object {
    "cvv": "pass",
  },
}
`;
